# mock-agents

./: README.md
agents/: compose.yaml
agents/generator/: Dockerfile  compose.yaml  generator_agent_41241.py
agents/validator_false/: Dockerfile  README.md  compose.yaml  false_agent_50002.py
agents/validator_true/: README.md  compose.yaml  true_agent_50001.py
client/: Dockerfile  README.md  cli_9999.py  compose.yaml  pyproject.toml
generator/: README.md  generator_agent_41241.py  pyproject.toml  requirements.txt
hello_world/: README.md  pyproject.toml
validator/: README.md  false_agent_50002.py  pyproject.toml  true_agent_50001.py
validator_false/: README.md  compose.yaml  false_agent_50002.py
validator_true/: Dockerfile  README.md  compose.yaml
