[project]
name = "mock-generator"

description = "Mock Generator"
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
license-files = ["LICENSE"]
dependencies = [
    "a2a-sdk[all]==1.1.0",
    "uvicorn[standard]",
]
keywords = ["A2A"]
classifiers = [
     "Development Status :: 3 - Alpha",
     "Intended Audience :: Developers",
    ]

[tool.hatch.build.targets.wheel]
packages = ["."]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
