[project]
name = "mock-helloworld"

description = "Mock"
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
license-files = ["LICENSE"]
dependencies = [
    "a2a-sdk[http-server]==1.1.0",
    "uvicorn[standard]==0.47.0",
    "litellm==1.83.10",
    "opentelemetry-api==1.41.1",
    "opentelemetry-sdk==1.41.1",
    "opentelemetry-exporter-otlp==1.41.1"
]
keywords = ["A2A"]
classifiers = [
     "Development Status :: 3 - Alpha",
     "Intended Audience :: Developers",
    ]

[tool.hatch.build.targets.wheel]
packages = ["."]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
